--- a/etc/my.cnf
+++ b/etc/my.cnf
@@ -50,6 +50,7 @@ tmpdir         = /tmp/
 # (via the "enable-named-pipe" option) will render mysqld useless!
 # 
 #skip-networking
+bind-address=0.0.0.0
 
 # Replication Master Server (default)
 # binary logging is required for replication
@@ -148,3 +149,31 @@ write_buffer = 2M
 
 [mysqlhotcopy]
 interactive-timeout
+
+# Galera-related settings
+[galera]
+# Mandatory settings
+#wsrep_on=ON
+#wsrep_provider=
+#wsrep_cluster_address=
+#binlog_format=row
+#default_storage_engine=InnoDB
+#innodb_autoinc_lock_mode=2
+#
+# Allow server to accept connections on all interfaces.
+#
+#bind-address=0.0.0.0
+#
+# Optional setting
+#wsrep_slave_threads=1
+#innodb_flush_log_at_trx_commit=0
+# this is only for embedded server
+[embedded]
+# This group is only read by MariaDB servers, not by MySQL.
+# If you use the same .cnf file for MySQL and MariaDB,
+# you can put MariaDB-only options here
+[mariadb]
+# This group is only read by MariaDB-10.3 servers.
+# If you use the same .cnf file for MariaDB of different versions,
+# use this group for options that older servers don't understand
+[mariadb-10.3]
