--- a/etc/conf.d/mysqld.cnf
+++ b/etc/conf.d/mysqld.cnf
@@ -10,3 +10,23 @@ innodb_compression_algorithm=lzma
 innodb-compression-level=5
 innodb_compression_default=ON
 innodb_page_cleaners=2
+
+
+
+performance-schema-instrument='stage/%=OFF'
+performance-schema-instrument='statement/%=OFF'
+performance-schema-instrument='wait/%=OFF'
+performance-schema-consumer-events-stages-current=OFF
+performance-schema-consumer-events-stages-history=OFF
+performance-schema-consumer-events-stages-history-long=OFF
+performance_schema_events_waits_history_size=50
+performance_schema_events_waits_history_long_size=15000
+performance_schema_consumer_events_statements_current=OFF
+performance_schema_consumer_events_statements_history=OFF
+performance_schema_consumer_events_statements_history_long=OFF
+performance_schema_consumer_events_waits_current=OFF
+performance_schema_consumer_events_waits_history=OFF
+performance_schema_consumer_events_waits_history_long=OFF
+performance_schema_consumer_global_instrumentation=OFF
+performance_schema_consumer_thread_instrumentation=OFF
+performance_schema_consumer_statements_digest=OFF
