--- a/etc/my.cnf
+++ b/etc/my.cnf
@@ -38,5 +38,7 @@ skip-host-cache
 skip-name-resolve
 bind-address=0.0.0.0
 
+performance_schema=ON
+
 # Custom config should go here
 !includedir /etc/mysql/conf.d/
